--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "ws": "^8.18.0"
+        "ws": "^8.18.0",
+        "express": "^4.18.2"
     }
 }
